--- a/style.css
+++ b/style.css
@@ -53,9 +53,9 @@ body {
 .navBar-itens a:hover {
   -webkit-mask-image: linear-gradient(
     -75deg,
-    rgba(0, 0, 0, 0.6) 30%,
-    #000 50%,
-    rgba(0, 0, 0, 0.6) 70%
+    rgba(57, 3, 78, 0.6) 30%,
+    #1b0047 50%,
+    rgba(38, 0, 70, 0.6) 70%
   );
   -webkit-mask-size: 200%;
   animation: shine 2s infinite;
@@ -360,7 +360,7 @@ body {
 /*PAGINA DE ESTUDOS*/
 
 .container-estudos {
-  margin-top: 50rem;
+  margin-top: 60rem;
   position: absolute;
   display: flex;
   width: 100%;
@@ -412,7 +412,6 @@ body {
   margin-top: 10px;
   display: flex;
   justify-content: center;
-
   width: 100px;
   height: 100px;
 }
@@ -524,7 +523,7 @@ body {
 /*CONTATOS - FOOTER DA PAGINA*/
 footer {
   top: 100%;
-  margin-top: 90rem;
+  margin-top: 105rem;
   position: absolute;
   display: flex;
   justify-content: center;
