--- a/style.css
+++ b/style.css
@@ -8,8 +8,9 @@ html,
 body {
   font-family: "Anek Bangla", sans-serif;
   overflow-x: hidden;
-  width: 100%;
+ 
   background-color: #f1faff;
+  scroll-behavior: smooth;
 }
 
 .nav-bar {
@@ -30,56 +31,66 @@ body {
 }
 
 .nav-bar .navBar-itens ul {
-  list-style: none;
-  text-align: center;
   display: flex;
+  align-content: center;
+  justify-content: space-between;
 }
 
 .nav-bar .navBar-itens li {
-  color: #000;
+  display: flex;
+  color: #081027;
   text-align: center;
-  margin: 70px;
+  margin: 60px;
   position: relative;
   font-size: 20px;
 }
 
 .navBar-itens a {
+  display: flex;
   text-align: center;
+  align-content: center;
   text-decoration: none;
-  color: #17003b;
+  color: #081027;
   transition: ease-in;
+ 
+ 
 }
 
-.navBar-itens a:hover {
-  -webkit-mask-image: linear-gradient(
-    -75deg,
-    rgba(57, 3, 78, 0.6) 30%,
-    #1b0047 50%,
-    rgba(38, 0, 70, 0.6) 70%
-  );
-  -webkit-mask-size: 200%;
-  animation: shine 2s infinite;
-  font-weight: 600;
-}
-@-webkit-keyframes shine {
-  from {
-    -webkit-mask-position: 150%;
-  }
+li.btn-curriculo a {
+  display: inline-block;
+  position: relative;
 
-  to {
-    -webkit-mask-position: -50%;
-  }
+  padding: 0 30px;
 }
-/* HOME PAGE
-/*da para colocar a imagem de fundo aqui*/
-.container-home-page {
+.nav-bar .navBar-itens li::after {
+  content: "";
   position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #003f79;
+  transition: transform 0.25s ease-out;
+}
+.nav-bar .navBar-itens li::after {
+  transform-origin: bottom center;
+}
+.nav-bar .navBar-itens li:hover::after {
+  transform-origin: bottom center;
+  transform: scaleX(1);
+}
+
+/* HOME PAGE*/
+
+.container-home-page {
+  position: relative;
   display: flex;
   justify-content: space-around;
   align-items: center;
   align-items: flex-end;
   /*da para colocar a imagem de fundo aqui*/
-  background-image: url();
+
   background-size: cover;
   margin-bottom: 200px;
   box-shadow: #000;
@@ -97,7 +108,7 @@ body {
 .text-animation {
   display: flex;
   justify-content: center;
-  margin-left: 35%;
+  transform: translateX(70vh);
 }
 
 .title-home .text-animation h1 {
@@ -116,7 +127,11 @@ body {
   opacity: 0;
 }
 .title-home span {
-  margin-bottom: 90px;
+  display: flex;
+  justify-content: center;
+margin-left: 4px;
+
+
 }
 
 .title-home p {
@@ -144,12 +159,8 @@ body {
   transition: transform 0.38s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
-.wisteria {
-  color: #8e44ad;
-}
-
 .belize {
-  color: #1623d3;
+  color: #003f79;
 }
 
 .pomegranate {
@@ -165,7 +176,7 @@ body {
   align-items: baseline;
 }
 
-.container-home-page .img-header img {
+.img-header img {
   width: 135px;
   height: 140px;
   position: absolute;
@@ -174,194 +185,67 @@ body {
   transform: translateX(-50%);
   border: 2px solid #000;
   border-radius: 4px;
-  align-items: end;
+  align-items: center;
 }
 
 /*PAGINA SOBRE MIM*/
 .container-sobre {
-  margin-top: 20rem;
-  padding-left: 10%;
-  position: absolute;
-  display: grid;
-
-  height: 750px;
+  display: flex;
   width: 100%;
+
+  justify-content: center;
 }
 .section-sobre {
-  position: relative;
-  margin-top: 2%;
-  margin-right: 25%;
-  padding-top: 5%;
   display: flex;
-  height: 300px;
-  width: 530px;
-
-  cursor: pointer;
+  align-items: center;
+  height: max-content;
+}
+.sobre-sct-txt,
+.int-prof-sct-txt {
+  align-items: center;
+  text-align: justify;
+  width: 500px;
+  border: 2px solid #c5c5c5;
+  border-radius: 8px;
+  margin: 10px;
+  padding: 8px;
+  h1{
+    text-align: center;
+  }
 }
 
 .section-sobre section {
-  border-radius: 10px;
-  transition: 0.2s ease-in;
-  border: 3px solid rgba(63, 63, 63, 0.25);
+  display: flex;
 }
 
-.section-sobre .sobre-sct-txt:hover {
-  background: rgba(255, 255, 255, 0.25);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
-  border: 3px solid rgba(255, 255, 255, 0.18);
-  height: 380px;
-}
-.container-sobre .section-sobre h1 {
-  padding-bottom: 5px;
-  font-size: 30px;
-
-  text-align: center;
+.sobre-sct-txt p {
+  overflow-y: scroll;
+  height: 150px;
+  scroll-behavior: smooth;
+ 
 }
 
-.container-sobre .section-sobre p {
-  border-radius: 50px 1px;
-  width: 550px;
-  font-size: 16px;
-  text-indent: 1em;
-  font-weight: 500;
-  padding-left: 10%;
-  padding-right: 10%;
+.sobre-sct-txt p::-webkit-scrollbar {
+  width: 8px;
+
 }
 
-.text2::before {
-  content: "Ler mais...";
-  color: #000;
-  font-weight: 600;
+.sobre-sct-txt p::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0);    
+    
 }
 
-.text2:hover:before {
-  opacity: 0;
+.sobre-sct-txt p::-webkit-scrollbar-thumb {
+  background-color: #c5c5c5;  
+  border-radius: 20px;     
+
 }
 
-.text2 {
-  color: #f1faff;
-}
 
-.text2:hover {
-  color: #000000;
-  transition: 0.3s ease-in;
-}
-
-/* Texto interesses profissionais */
-
-.interesses-sct-txt {
-  border: 3px solid rgba(63, 63, 63, 0.25);
-  width: 530px;
-  padding-bottom: 60px;
-  margin-left: 40px;
-}
-
-.section-sobre .interesses-sct-txt:hover {
-  background: rgba(255, 255, 255, 0.25);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
-  border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.18);
-}
-.coding-gif img {
-  margin-bottom: 19px;
-  margin-left: 75px;
-  width: 450px;
-  border: 3px solid #081027;
-  border-radius: 10px;
-}
-
-/* LISTA DE HOBBIES E CURIOSIDADES */
-
-
-.dropdown-hobbies,
-.dropdown-musicas {
-  position: relative;
-  margin-top: 10%;
-  margin-left: 110px;
-  justify-content: center;
-  height: 50px;
-  width: 330px;
-  border: 3px solid rgba(63, 63, 63, 0.041);
-  border-radius: 10px;
-  transition: 6ms ease-in-out;
-  cursor: pointer;
-}
-
-.dropdown-musicas {
-  margin-top: 100px;
-}
-.dropdown-hobbies button,
-.dropdown-musicas button {
-  background: none;
-  font-weight: 700;
-  margin-left: 30%;
-  font-family: "Anek Bangla", sans-serif;
-  font-size: 20px;
-  position: relative;
-  text-align: center;
-  color: #000000;
-  border: none;
-  cursor: pointer;
-}
-.dropdown-musicas button {
-  margin-left: 16%;
-}
-.conteudo-dd ul {
-  color: #000;
-  font-size: 17px;
-  transition: 0.9s ease-in;
-}
-
-.conteudo-dd li {
-  list-style: none;
-  transition: 0.3s ease-in;
-}
-.dropdown-hobbies .conteudo-dd,
-.dropdown-musicas .conteudo-dd {
-  display: none;
-  position: absolute;
-  background-color: #f1faff;
-
-  box-shadow: 2px 2px 5px hsla(0, 0%, 0%, 0.8);
-  text-align: center;
-  list-style: none;
-}
-.dropdown-hobbies:hover .conteudo-dd,
-.dropdown-musicas:hover .conteudo-dd {
-  display: block;
-  margin-top: 5px;
-  width: 325px;
-}
-
-.dropdown-hobbies li:hover,
-.dropdown-musicas li:hover,
-.dropdown-musicas a:hover {
-  background-color: #081027;
-  color: #fff;
-}
-
-.conteudo-dd img {
-  position: relative;
-  width: 23px;
-}
-.conteudo-dd a {
-  text-decoration: none;
-  color: #003f79;
-}
-.conteudo-dd a:hover {
-  text-decoration: none;
-  color: #f1faff;
-}
 
 /*PAGINA DE ESTUDOS*/
 
 .container-estudos {
-  margin-top: 60rem;
-  position: absolute;
   display: flex;
   width: 100%;
   justify-content: center;
@@ -382,16 +266,16 @@ body {
 /*Lista/card de tecnlogias e projetos*/
 .container-estudos .estudos-tecnologia {
   margin-top: 30px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+  display: grid;
+
+  grid-template-columns: repeat(4, 25%);
 }
 .container-estudos .estudos-tecnologia ul {
   border: 3px solid rgba(63, 63, 63, 0.25);
   border-radius: 5px;
   margin: 20px;
   width: 280px;
-  height: 397px;
+  height: 30vh;
   justify-content: center;
   align-items: center;
   transition: 0.2s ease-in;
@@ -404,7 +288,6 @@ body {
   -webkit-backdrop-filter: blur(4px);
   border-radius: 5px;
   border: 3px solid rgba(255, 255, 255, 0.18);
-  height: 400px;
 }
 
 .container-estudos .estudos-tecnologia img {
@@ -428,10 +311,10 @@ body {
 }
 /* CARDS PROJETOS */
 .estudos-projetos {
-  display: grid;
-  grid-template-columns: repeat(3, 25%);
-  grid-gap: 20px;
-  margin-left: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  flex-wrap: wrap;
 }
 .container-estudos .estudos-projetos ul {
   border: 3px solid rgba(0, 0, 0, 0.25);
@@ -522,9 +405,6 @@ body {
 
 /*CONTATOS - FOOTER DA PAGINA*/
 footer {
-  top: 100%;
-  margin-top: 105rem;
-  position: absolute;
   display: flex;
   justify-content: center;
   height: 280px;
