--- a/style.css
+++ b/style.css
@@ -265,17 +265,17 @@ margin-left: 4px;
 
 /*Lista/card de tecnlogias e projetos*/
 .container-estudos .estudos-tecnologia {
-  margin-top: 30px;
-  display: grid;
-
-  grid-template-columns: repeat(4, 25%);
+display: flex;
+align-items: center;
+justify-content: center;
+flex-wrap: wrap;
 }
 .container-estudos .estudos-tecnologia ul {
   border: 3px solid rgba(63, 63, 63, 0.25);
   border-radius: 5px;
   margin: 20px;
   width: 280px;
-  height: 30vh;
+
   justify-content: center;
   align-items: center;
   transition: 0.2s ease-in;
@@ -307,7 +307,7 @@ margin-left: 4px;
 .container-estudos .estudos-tecnologia p {
   text-align: center;
   text-indent: 1em;
-  padding: 10px;
+  padding: 20px;
 }
 /* CARDS PROJETOS */
 .estudos-projetos {
