--- a/style.css
+++ b/style.css
@@ -446,7 +446,7 @@ footer {
 }
 
 .col-links {
-  display: flex;
+  display: none;
   text-align: center;
   align-items: center;
   flex-direction: column;
@@ -676,6 +676,39 @@ footer {
     margin-bottom: 7%;
     padding: 0 10px;
   }
+
+  
+.col-links,.col-infos {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  flex-direction: column;
+  text-decoration: none;
+  color: #fff;
+  width: 100%;
+}
+
+
+.col-links ul {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  margin-top: 5px;
+}
+.col-links li {
+  list-style: none;
+}
+
+.col-links a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.col-links a:hover {
+  background-size: 0 1px, 100% 3px;
+}
+
+
 }
 
 /* Telas médias (tablets) */
@@ -722,6 +755,7 @@ footer {
     flex-direction: column;
     margin-top: 12%;
     padding: 10px 30px;
+
     h1 {
       font-size: 34px;
       font-weight: 300;
@@ -832,4 +866,36 @@ footer {
     margin-bottom: 7%;
     padding: 0 10px;
   }
+
+  
+.col-links,.col-infos {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  flex-direction: column;
+  text-decoration: none;
+  color: #fff;
+  width: 100%;
+}
+
+
+.col-links ul {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  margin-top: 5px;
+}
+.col-links li {
+  list-style: none;
+}
+
+.col-links a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.col-links a:hover {
+  background-size: 0 1px, 100% 3px;
+}
+
 }
